--- a/hieradata/role/common/gerrit/server.yaml
+++ b/hieradata/role/common/gerrit/server.yaml
@@ -2,7 +2,7 @@ admin::groups:
   - gerrit-root
   - gerrit-admin
 
-gerrit::server::host: 'gerrit.wikimedia.org'
+gerrit::server::domain: 'wikimedia.org'
 gerrit::server::slave_hosts:
     - 'gerrit-slave.wikimedia.org'
 gerrit::server::master_host: 'cobalt.wikimedia.org'
