bootstrapvz: update for newer sudo-ldap packages on jessie
sudo-ldap is very touchy about disabling the old sudo tool;
these new seem to work.

Change-Id: I905cd546e3a2ddb99142f360368f0274fe9a8fa2

--- a/modules/labs_bootstrapvz/files/labs-jessie.manifest.yaml
+++ b/modules/labs_bootstrapvz/files/labs-jessie.manifest.yaml
@@ -186,7 +186,7 @@ plugins:
     #  file_copy; hence the touches and explicit copies below.
     commands:
       - ['chroot', '{root}', 'passwd', '-ld', 'root']
-      - ['SUDO_FORCE_REMOVE=yes chroot {root} apt-get --force-yes --assume-yes install sudo-ldap']
+      - ['SUDO_FORCE_REMOVE=yes chroot {root} apt-get --allow-unauthenticated --assume-yes -o Dpkg::Options::="--force-confold" install sudo-ldap']
       - ['chroot', '{root}', 'rm', '-f', '/etc/ssh/ssh_host*key*']
       - ['chroot', '{root}', 'rm', '-f', '/etc/sudo-ldap.conf']
       - ['chroot', '{root}', 'ln', '-s', '/etc/ldap/ldap.conf', '/etc/sudo-ldap.conf']
