Allow contint-admins to interact with zuul service
We were able to reload/restart the zuul service as the zuul user via the
sudo rule:

    ALL = (zuul) NOPASSWD: ALL

Since 4f0df3e8b, zuul is behind systemd which requires root access as I
understand it.

Bug: T167845
Change-Id: I09579510031d4924e974d09e4e1fc7cfde0e833c

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -151,6 +151,11 @@ groups:
                  'ALL = NOPASSWD: /usr/sbin/service nodepool stop',
                  'ALL = NOPASSWD: /usr/sbin/service nodepool restart',
                  'ALL = NOPASSWD: /usr/sbin/service nodepool status',
+                 'ALL = NOPASSWD: /usr/sbin/service zuul reload',
+                 'ALL = NOPASSWD: /usr/sbin/service zuul restart',
+                 'ALL = NOPASSWD: /usr/sbin/service zuul start',
+                 'ALL = NOPASSWD: /usr/sbin/service zuul stop',
+                 'ALL = NOPASSWD: /usr/sbin/service zuul status',
                  'ALL = NOPASSWD: /usr/sbin/service zuul-merger reload',
                  'ALL = NOPASSWD: /usr/sbin/service zuul-merger restart',
                  'ALL = NOPASSWD: /usr/sbin/service zuul-merger start',
