openstack: prometheus node_exporter restrict listen IP
Bug: T169039
Change-Id: I041afc6571a1e6ca4637ffe81259ba99cfb0e19f

--- a/hieradata/role/eqiad/wmcs/openstack/main/net.yaml
+++ b/hieradata/role/eqiad/wmcs/openstack/main/net.yaml
@@ -8,3 +8,5 @@ openstack::log_group: labnet-users
 # lock down SSH to administrative IP only
 profile::base::ssh_server_settings:
   listen_address: "%{::ipaddress}"
+
+prometheus::node_exporter::web_listen_address: "%{::ipaddress}:9100"
