adding wmf staff david chan to admin module ldap section
user needs wmf ldap flag tied to account, including in admin module

Bug: T176142
Change-Id: Ib449c861aa6a17f50eb25bde2495cbbe771d2928

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -2773,3 +2773,7 @@ ldap_only_users:
     ensure: present
     realname: Erika Bjune
     email: ebjune@wikimedia.org
+  dchan:
+    ensure: present
+    realname: David Chan
+    email: dchan@wikimedia.org
