--- a/hieradata/eqiad/profile/openstack/main/pdns.yaml
+++ b/hieradata/eqiad/profile/openstack/main/pdns.yaml
@@ -2,3 +2,4 @@ profile::openstack::main::pdns::host: 'labs-ns0.wikimedia.org'
 profile::openstack::main::pdns::host_secondary: 'labs-ns1.wikimedia.org'
 profile::openstack::main::pdns::recursor: 'labs-recursor0.wikimedia.org'
 profile::openstack::main::pdns::recursor_secondary: 'labs-recursor1.wikimedia.org'
+profile::openstack::main::pdns::monitor_target_fqdn: 'tools-grid-master.tools.eqiad.wmflabs'
