aptrepo: allow rsyncing from package build hosts
Bug: T176178
Change-Id: I1d1b2cf834fb4b19603fef7894296cb0348082a6

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -501,6 +501,8 @@ deployment_server: tin.eqiad.wmnet
 install_server: install1002.wikimedia.org
 install_server_failover: install2002.wikimedia.org
 
+build_server: copper.eqiad.wmnet
+
 netmon_server: netmon1002.wikimedia.org
 
 releases_server: releases1001.eqiad.wmnet
