smokeping::apache: disallow .htaccess usage
Change-Id: Idf81ca4ab8be7825b49dbdbf9059acdbc3af4400

--- a/modules/smokeping/files/apache.conf
+++ b/modules/smokeping/files/apache.conf
@@ -12,7 +12,7 @@
 
     <Directory /var/www>
         Options Indexes FollowSymLinks MultiViews
-        AllowOverride All
+        AllowOverride None
         Require all granted
     </Directory>
 
