--- a/hieradata/regex.yaml
+++ b/hieradata/regex.yaml
@@ -302,3 +302,8 @@ db_like_raid_policy:
 cache_numa_isolate:
   __regex: !ruby/regexp /^cp40(2[1-9]|3[0-2])\./
   numa_networking: isolate
+
+# Temporary to allow a painless host imaging process
+new_mw_appservers:
+  __regex: !ruby/regexp /^mw13(0[7-9]|1[0-9]|2[0-8])\.eqiad\.wmnet$/
+  profile::base::notifications_enabled: '0'
