profile::kafka::broker: add the monitoring_enabled option
Bug: T167992
Change-Id: I3d472a3237646867c2e80d665971097939882b1d

--- a/hieradata/role/common/kafka/jumbo/broker.yaml
+++ b/hieradata/role/common/kafka/jumbo/broker.yaml
@@ -5,6 +5,9 @@ profile::kafka::broker::kafka_cluster_name: jumbo
 # Enable the Prometheus JMX Exporter
 profile::kafka::broker::prometheus_monitoring_enabled: true
 
+# Disable jmxtrans/graphite monitoring
+profile::kafka::broker::monitoring_enabled: false
+
 profile::kafka::broker::log_dirs: [/srv/kafka/data]
 profile::kafka::broker::plaintext: true
 # TODO: does not yet work.
