base: ability to send syslog over TLS
Also enable syslog over TLS in codfw for prometheus::ops as a test.

Bug: T136312
Change-Id: I190c036d111593e625333a29eb8676c43fa4be7b

--- a/hieradata/role/codfw/prometheus/ops.yaml
+++ b/hieradata/role/codfw/prometheus/ops.yaml
@@ -2,3 +2,6 @@ prometheus::server::memory_chunks: '3145728'
 prometheus::server::max_chunks_to_persist: '1048576'
 lvs::realserver::realserver_ips:
   - 10.2.1.25
+
+profile::base::syslog_server_tls: ['syslog.eqiad.wmnet:6154', 'syslog.codfw.wmnet:6154']
+profile::base::syslog_server: []
