partman: restore previous recipe for mw13*
The recipe that I wanted to use for the new appservers
is not working for some obscure reason, so I am
reverting the previous value to avoid any issues
if anybody will need to reimage an mw server during
the next hours. I'll eventually get the issue and
win over partman, but it is not a quick and easy battle.

Bug: T165519
Change-Id: Iaa03ba492b936121027b54d4346785acfb65304b

--- a/modules/install_server/files/autoinstall/netboot.cfg
+++ b/modules/install_server/files/autoinstall/netboot.cfg
@@ -132,7 +132,7 @@ d-i preseed/include_command string  \
         mw211[89]|mw2152|mw2246) echo partman/mw-no-tmp.cfg ;; \
         mw1259) echo partman/mw-raid1.cfg ;; \
         mw12[6-9][0-9]) echo partman/mw-raid1.cfg ;; \
-        mw13*) echo partman/mw-raid1-lvm.cfg ;; \
+        mw13*) echo partman/mw-raid1.cfg ;; \
         mw22*) echo partman/mw-raid1.cfg ;; \
         osmium) echo partman/mw-raid1.cfg ;; \
         mw[0-9]*) echo partman/mw.cfg ;; \
