Add LVS service for druid-analytics-broker
Bug: T176223
Change-Id: If3aa1b3e3f424411e1a5d1a55b5dbb7db29cf6fa

--- a/conftool-data/service/services.yaml
+++ b/conftool-data/service/services.yaml
@@ -271,3 +271,11 @@ logstash:
     default_values:
       pooled: 'no'
       weight: 10
+druid-analytics:
+  druid-analytics-broker:
+    port: 8082
+    datacenters:
+    - eqiad
+    default_values:
+      pooled: 'yes'
+      weight: 10
