Add LVS service for druid-broker
Bug: T176223
Change-Id: If3aa1b3e3f424411e1a5d1a55b5dbb7db29cf6fa

--- a/conftool-data/discovery/services.yaml
+++ b/conftool-data/discovery/services.yaml
@@ -22,3 +22,4 @@ trendingedits: [eqiad, codfw]
 "recommendation-api": [eqiad, codfw]
 wdqs: [eqiad, codfw]
 zotero: [eqiad, codfw]
+druid-broker: [eqiad]
