--- a/conftool-data/node/eqiad.yaml
+++ b/conftool-data/node/eqiad.yaml
@@ -344,3 +344,10 @@ eqiad:
   kubernetes:
     argon.eqiad.wmnet: [kubemaster]
     chlorine.eqiad.wmnet: [kubemaster]
+  druid:
+    druid1001.eqiad.wmnet: [druid-broker]
+    druid1002.eqiad.wmnet: [druid-broker]
+    druid1003.eqiad.wmnet: [druid-broker]
+    druid1004.eqiad.wmnet: [druid-broker]
+    druid1005.eqiad.wmnet: [druid-broker]
+    druid1006.eqiad.wmnet: [druid-broker]
