--- a/conftool-data/service/services.yaml
+++ b/conftool-data/service/services.yaml
@@ -271,3 +271,11 @@ logstash:
     default_values:
       pooled: 'no'
       weight: 10
+druid:
+  druid-broker:
+    port: 8182
+    datacenters:
+    - eqiad
+    default_values:
+      pooled: 'yes'
+      weight: 10
