Add LVS service for druid-analytics-broker
This adds a new LVS cluster called 'druid-analytics'.
Individual LVS services can be added to this cluster
by adding a new service for a port.  Every node in this
cluster runs each druid service.

For now, we only need LVS on the druid broker, which
handles incoming druid queries.

Note that this change only adds druid100[123] into the
druid-analytics LVS cluster, as we intend to soon
separate druid100[456] into a new druid-public
cluster.

Bug: T176223
Change-Id: If3aa1b3e3f424411e1a5d1a55b5dbb7db29cf6fa

--- a/conftool-data/node/eqiad.yaml
+++ b/conftool-data/node/eqiad.yaml
@@ -320,3 +320,7 @@ eqiad:
   kubernetes:
     argon.eqiad.wmnet: [kubemaster]
     chlorine.eqiad.wmnet: [kubemaster]
+  druid-analytics:
+    druid1001.eqiad.wmnet: [druid-analytics-broker]
+    druid1002.eqiad.wmnet: [druid-analytics-broker]
+    druid1003.eqiad.wmnet: [druid-analytics-broker]
