Set druid.processing.numMergeBuffers: 10 for druid broker and historical
Allows use of V2 groupBy engine

Change-Id: Ie05d4d07bda1c91f7a5a27d0bbf37117ebb7f447

--- a/hieradata/eqiad/druid/broker.yaml
+++ b/hieradata/eqiad/druid/broker.yaml
@@ -1,6 +1,8 @@
 druid::broker::properties:
   druid.processing.numThreads: 10
   druid.processing.buffer.sizeBytes: 2147483647
+  # Set numMergeBuffers to use v2 groupBy engine
+  druid.processing.numMergeBuffers: 10
   druid.server.http.numThreads: 20
   druid.broker.http.numConnections: 20
   druid.broker.http.readTimeout: PT5M
