--- a/hieradata/eqiad/druid/historical.yaml
+++ b/hieradata/eqiad/druid/historical.yaml
@@ -1,6 +1,8 @@
 druid::historical::properties:
   druid.processing.numThreads: 10
   druid.processing.buffer.sizeBytes: 1073741824
+  # Set numMergeBuffers to use v2 groupBy engine
+  druid.processing.numMergeBuffers: 10
   druid.server.http.numThreads: 20
   druid.server.maxSize: 2748779069440 # 2.5 TB
   druid.segmentCache.locations: '[{"path":"/var/lib/druid/segment-cache","maxSize"\:2748779069440}]'
