[WIP] Allow admin module to ensure system user membership in managed groups
Bug: T174465
Change-Id: I495942b6a65db7058a6272277ada9f0286a4ba9e

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -252,6 +252,7 @@ groups:
               flemmerich, mkroetzsch, akrausetud, filippo, pmiazga, faidon,
               piccardi, fdans, eevans, anomie, demon, ladsgroup, musikanimal, joewalsh,
               kaldari, goransm, ema, dsaez, shiladsen, rho]
+    system_members: [analytics-search]
   analytics-admins:
     gid: 732
     description: Admin access to analytics cluster.
