Update contact for one NDA user
Change-Id: Ie6bd93aaf459627e180d5cde1ec33915708143b3

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -2067,7 +2067,7 @@ users:
     uid: 13978
     email: jclark@cyber.law.harvard.edu
     expiry_date: 2018-01-01
-    expiry_contact: zzhou@wikimedia.org
+    expiry_contact: slaporte@wikimedia.org
   gehel:
     ensure: present
     gid: 500
