RESTBase: Separate eqiad and codfw seeds
For the new storage schema, we need the list of Cassandra 3.x seeds for
RESTBase to be separated by DC.

Bug: T169940
Change-Id: Ic497931c6c49d5135ee90e777a3109e27d84bb4a

--- a/hieradata/role/codfw/restbase/production.yaml
+++ b/hieradata/role/codfw/restbase/production.yaml
@@ -5,6 +5,16 @@ profile::restbase::seeds:
   - restbase2007-a.codfw.wmnet
   - restbase2007-b.codfw.wmnet
   - restbase2007-c.codfw.wmnet
+profile::restbase::seeds_ng:
+  - restbase2001-a.codfw.wmnet
+  - restbase2001-b.codfw.wmnet
+  - restbase2001-c.codfw.wmnet
+  - restbase2003-a.codfw.wmnet
+  - restbase2003-b.codfw.wmnet
+  - restbase2003-c.codfw.wmnet
+  - restbase2005-a.codfw.wmnet
+  - restbase2005-b.codfw.wmnet
+  - restbase2005-c.codfw.wmnet
 # used for rate limiting
 profile::restbase::hosts:
   - restbase2002.codfw.wmnet
