--- a/hieradata/role/eqiad/restbase/production.yaml
+++ b/hieradata/role/eqiad/restbase/production.yaml
@@ -7,6 +7,16 @@ profile::restbase::seeds:
   - restbase1012-b.eqiad.wmnet
   - restbase1013-a.eqiad.wmnet
   - restbase1013-b.eqiad.wmnet
+profile::restbase::seeds_ng:
+  - restbase1008-a.eqiad.wmnet
+  - restbase1008-b.eqiad.wmnet
+  - restbase1008-c.eqiad.wmnet
+  - restbase1009-a.eqiad.wmnet
+  - restbase1009-b.eqiad.wmnet
+  - restbase1009-c.eqiad.wmnet
+  - restbase1010-a.eqiad.wmnet
+  - restbase1010-b.eqiad.wmnet
+  - restbase1010-c.eqiad.wmnet
 # used for rate limiting
 profile::restbase::hosts:
   - restbase1007.eqiad.wmnet
