partman: fix mw-raid1-lvm and set it as default recipe for mw13*
Bug: T165519
Change-Id: I7b1f3241f0d18605ec69edd67d216e7412de971e

--- a/modules/install_server/files/autoinstall/partman/mw-raid1-lvm.cfg
+++ b/modules/install_server/files/autoinstall/partman/mw-raid1-lvm.cfg
@@ -2,59 +2,15 @@
 #
 # * two disks, sda & sdb
 # * layout:
-#   - /	:   ext4, RAID1/LVM, max 800GB
-#   - /boot: ext4, RAID1, 5GB
+#   - /	:   ext4, RAID1/LVM, 700GB
+#   - /srv: ext4, RAID1, 100GB
 #   - placeholder logical volume - RAID1/LVM - rest of the space
 
 d-i	partman-auto/method		string	raid
 d-i	partman-md/device_remove_md	boolean	true
 d-i	partman-lvm/device_remove_lvm	boolean	true
 
-# Use the first two disks
-d-i	partman-auto/disk	string	/dev/sda /dev/sdb
-
-# Define physical partitions
-d-i	partman-auto/expert_recipe	string	multiraid ::	\
-	5000	5000	5000	raid				\
-		$primary{ } 					\
-		method{ raid }					\
-		$lvmignore{ }					\
-		$bootable{ }					\
-		.						\
-	1000	1000	-1	raid				\
-		method{ raid }					\
-		$lvmignore{ }					\
-		.						\
-	400000000 50000 800000000 ext4				\
-		method{ format }				\
-		format{ }					\
-		use_filesystem{ }				\
-		filesystem{ ext4 }				\
-		lv_name{ root }					\
-		$defaultignore{ }				\
-		$lvmok{ }					\
-		mountpoint{ / }					\
-		.						\
-	64	1000	200000000	ext4			\
-		method{ format }				\
-		format{ }					\
-		use_filesystem{ }				\
-		filesystem{ ext4 }				\
-		lv_name{ placeholder }				\
-		$defaultignore{ }				\
-		$lvmok{ }					\
-		.
-
-# Parameters are:
-# <raidtype> <devcount> <sparecount> <fstype> <mountpoint> \
-#	<devices> <sparedevices>
-d-i	partman-auto-raid/recipe	string		\
-		1	2	0	ext4	/boot	\
-			/dev/sda1#/dev/sdb1		\
-		.					\
-		1	2	0	lvm	-	\
-			/dev/sda2#/dev/sdb2		\
-		.
+d-i partman-basicmethods/method_only	boolean false
 
 d-i	partman-md/confirm		boolean	true
 d-i	partman-md/confirm_nooverwrite 	boolean	true
@@ -66,4 +22,48 @@ d-i	partman/confirm_nooverwrite 	boolean	true
 d-i	partman-auto-lvm/guided_size	string	80%
 d-i	partman-lvm/confirm		boolean	true
 d-i	partman-lvm/confirm_nooverwrite	boolean true
-partman-basicfilesystems partman-basicfilesystems/no_swap boolean false
+
+d-i	partman-basicfilesystems/no_swap	boolean	false
+
+# Use the first two disks
+d-i	partman-auto/disk	string	/dev/sda /dev/sdb
+
+# Define physical partitions
+d-i	partman-auto/expert_recipe	string	multiraid ::	\
+	1000	1000	-1	raid				\
+		method{ raid }					\
+		$lvmignore{ }					\
+		.						\
+	10000 71000 600000000 ext4				\
+		method{ format }				\
+		format{ }					\
+		use_filesystem{ }				\
+		filesystem{ ext4 }				\
+		lv_name{ root }					\
+		$defaultignore{ }				\
+		$lvmok{ }					\
+		mountpoint{ / }					\
+		.						\
+	10000 30000 200000000 ext4				\
+		method{ format }				\
+		format{ }					\
+		use_filesystem{ }				\
+		filesystem{ ext4 }				\
+		lv_name{ srv }					\
+		$defaultignore{ }				\
+		$lvmok{ }					\
+		mountpoint{ /srv }				\
+		.						\
+	10000 27500 200000000 ext4				\
+		lv_name{ placeholder }				\
+		$defaultignore{ }				\
+		$lvmok{ }					\
+		.
+
+# Parameters are:
+# <raidtype> <devcount> <sparecount> <fstype> <mountpoint> \
+#	<devices> <sparedevices>
+d-i	partman-auto-raid/recipe	string		\
+		1	2	0	lvm	-	\
+			/dev/sda1#/dev/sdb1		\
+		.
