--- a/modules/install_server/files/autoinstall/netboot.cfg
+++ b/modules/install_server/files/autoinstall/netboot.cfg
@@ -167,7 +167,7 @@ d-i preseed/include_command string  \
         snapshot100[5-7]) echo partman/lvm-ext-srv.cfg ;; \
         tin) echo partman/lvm-tin.cfg ;; \
         thumbor*) echo partman/raid1-lvm-ext4-srv.cfg ;; \
-        wdqs100[1-3]|wdqs200[1-3]) echo partman/lvm-ext-srv.cfg ;; \
+        wdqs1003|wdqs200[1-3]) echo partman/lvm-ext-srv.cfg ;; \
         wtp[1-2]0[0-4][0-9]|hafnium) echo partman/raid1-lvm.cfg ;; \
         wasat) echo partman/raid1-lvm-ext4-srv.cfg ;; \
     esac
