--- a/hieradata/labs.yaml
+++ b/hieradata/labs.yaml
@@ -77,6 +77,8 @@ zookeeper_clusters:
     hosts:
       "%{::fqdn}": 1
 
+# TODO: remove this! We want the future parser to be used in labs as well.
+profile::base::use_future_parser: false
 profile::base::nrpe_allowed_hosts: '10.68.16.195' # icinga
 profile::base::ssh_server_settings:
   disable_agent_forwarding: false
