--- a/modules/torrus/files/apache.conf
+++ b/modules/torrus/files/apache.conf
@@ -12,7 +12,7 @@
 
     <Directory /var/www>
         Options Indexes FollowSymLinks MultiViews
-        AllowOverride All
+        AllowOverride None
         Order allow,deny
         allow from all
     </Directory>
