--- a/hieradata/labs.yaml
+++ b/hieradata/labs.yaml
@@ -77,6 +77,7 @@ zookeeper_clusters:
     hosts:
       "%{::fqdn}": 1
 
+profile::base::environment: ''
 profile::base::nrpe_allowed_hosts: '10.68.16.195' # icinga
 profile::base::ssh_server_settings:
   disable_agent_forwarding: false
