--- a/hieradata/role/common/analytics_cluster/druid/worker.yaml
+++ b/hieradata/role/common/analytics_cluster/druid/worker.yaml
@@ -3,6 +3,8 @@ admin::groups:
 
 profile::druid::common::zookeeper_cluster_name: druid-eqiad
 
+profile::druid::tlsproxy::cert_name: druid.svc.eqiad.wmnet
+
 # Make druid build an extension composed of CDH jars.
 profile::druid::common::use_cdh: true
 
