role::analytics_cluster::druid::worker: introduce tlsproxy for druid
The druid TLS proxy is a basic nginx server doing HTTP auth with
a htpasswd file, created on the fly by puppet using private hiera
data (that needs to be configured before this code review is merged).

The proxy will be useful when Druid will expose data to services like
AQS, outside the analytics network.

The code is heavily inspired by the etcd::tlsproxy, so in the future
the two code paths should be merged to utilize a generic profile (DRY).

Bug: T176223
Change-Id: Id80140136a8c404a844292102579347af0b03ac1

--- a/hieradata/role/common/analytics_cluster/druid/worker.yaml
+++ b/hieradata/role/common/analytics_cluster/druid/worker.yaml
@@ -3,6 +3,9 @@ admin::groups:
 
 profile::druid::common::zookeeper_cluster_name: druid-eqiad
 
+profile::druid::tlsproxy::cert_name: druid.svc.eqiad.wmnet
+profile::druid::tlsproxy::ferm_srange: '(($AQS_HOSTS $ANALYTICS_NETWORKS))''
+
 # Make druid build an extension composed of CDH jars.
 profile::druid::common::use_cdh: true
 
