Move jenkins agent username to hiera
The Jenkins master connects to its slave using different usernames:

- production: jenkins-slave
- beta/integration/puppet-compiler: jenkins-deploy
- nodepool: jenkins

They hardcoded all other the place which makes it impossible to reuse
manifests between context.

Define a new hiera global variable 'jenkins_agent_username':

 production: jenkins-slave
 labs: jenkins-deploy

Override it for the labs project 'contintcloud' (Nodepool) which uses
'jenkins'.

Migrate all hardcoded values!

Change-Id: I4a5127c90a35344200903523aaea890e07b158a6

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -553,3 +553,6 @@ udp2log_aggregator: "udplog:8420"
 
 tcpircbot_host: 'icinga.wikimedia.org'
 tcpircbot_port: 9200
+
+# Username the CI Jenkins master connects with
+jenkins_agent_username: 'jenkins-slave'
