[WIP] webperf: Add navtiming tests to puppet.git:/tox.ini
Change-Id: I2fdb8e0b978b2406ebc386c716c6c4321aeff0d8

--- a/tox.ini
+++ b/tox.ini
@@ -31,6 +31,9 @@ deps =
     -rmodules/admin/data/requirements.txt
 commands = nosetests modules/admin/data modules/mediawiki/files/apache/sites/redirects
 
+[testenv:webperf]
+commands = nosetests modules/webperf/files
+
 [testenv:commit-message]
 deps = commit-message-validator
 commands = commit-message-validator
