webperf: Add navtiming tests to puppet.git:/tox.ini
Change-Id: I2fdb8e0b978b2406ebc386c716c6c4321aeff0d8

--- a/tox.ini
+++ b/tox.ini
@@ -2,7 +2,7 @@
 minversion = 1.6
 skipsdist = True
 
-envlist = commit-message, py27, pep8
+envlist = webperf, commit-message, py27, pep8
 
 [flake8]
 max-line-length = 100
@@ -30,6 +30,9 @@ deps =
     nose
     -rmodules/admin/data/requirements.txt
 commands = nosetests modules/admin/data modules/mediawiki/files/apache/sites/redirects
+
+[testenv:webperf]
+commands = nosetests modules/webperf/files
 
 [testenv:commit-message]
 deps = commit-message-validator
