admin: Add gjg to contint-admin
I could have used this to better debug the CI issue last night.

Change-Id: Ie445802d7bd5c362ea7e2c90a932143aa4354a49

--- a/modules/admin/data/data.yaml
+++ b/modules/admin/data/data.yaml
@@ -140,7 +140,7 @@ groups:
     gid: 719
     description: users with some sudo permissions on jenkins and nodepool hosts
     members: [bd808, cscott, dduvall, demon, krinkle, reedy, marktraceur,
-              twentyafterfour, zfilipin, thcipriani, legoktm,
+              twentyafterfour, zfilipin, thcipriani, legoktm, gjg,
               hashar, niedzielski, addshore]
     privileges: ['ALL = (jenkins) NOPASSWD: ALL',
                  'ALL = (jenkins-slave) NOPASSWD: ALL',
