--- a/hieradata/role/common/analytics_cluster/druid/worker.yaml
+++ b/hieradata/role/common/analytics_cluster/druid/worker.yaml
@@ -26,3 +26,8 @@ profile::hadoop::client::zookeeper_cluster_name: main-eqiad
 profile::hadoop::client::resourcemanager_hosts:
   - analytics1001.eqiad.wmnet
   - analytics1002.eqiad.wmnet
+
+profile::druid::worker::autoreload: false
+profile::druid::worker::ferm_srange: '$ANALYTICS_NETWORKS'
+profile::druid::worker::broker_ferm_srange: '$ANALYTICS_NETWORKS'
+profile::druid::worker::monitoring_enabled: true
