logstash: api feature logs should be sent to both eqiad and codfw clusters
Bug: T176430
Change-Id: I8e1344124ce4afbf769b4ebc67b185caa6557f39

--- a/hieradata/labs/deployment-prep/common.yaml
+++ b/hieradata/labs/deployment-prep/common.yaml
@@ -255,6 +255,8 @@ profile::elasticsearch::search_thread_pool_executors: 4
 profile::elasticsearch::storage_device: dm-0
 
 role::logstash::collector::statsd_host: labmon1001.eqiad.wmnet
+role::logstash::apifeatureusage::elastic_hosts:
+  - deployment-logstash2.deployment-prep.eqiad.wmflabs
 "redis::shards":
   jobqueue: &labs_shards
     eqiad:
