profile::kafka::broker_prometheus_exp: update delayed op metric
The following metric pattern:

kafka_server_delayedoperationpurgatory_numdelayedoperations_delayedoperation_deleterecords

should become:

kafka_server_delayedoperationpurgatory_numdelayedoperations{delayedoperation=deleterecords}

Bug: T175922
Change-Id: I985eea24729237034c05eabfc4eb1707f162015d

--- a/modules/profile/files/kafka/broker_prometheus_jmx_exporter.yaml
+++ b/modules/profile/files/kafka/broker_prometheus_jmx_exporter.yaml
@@ -35,6 +35,11 @@ rules:
   name: kafka_server_$1_$2_total
   type: COUNTER
 
+- pattern : kafka.server<type=(.*), name=(.+), delayedOperation=(.+)><>(Count|Value)
+  name: kafka_server_$1_$2
+  labels:
+    delayedoperation: "$3"
+
 - pattern : kafka.server<type=(.+), name=(.+), clientId=(.+), topic=(.+), partition=(.*)><>(Count|Value)
   name: kafka_server_$1_$2
   labels:
