profile::kafka::broker_prometheus_exp: update delayed op metric
The following metric pattern:

kafka_server_delayedoperationpurgatory_numdelayedoperations_delayedoperation_deleterecords

should become:

kafka_server_delayedoperationpurgatory_numdelayedoperations{delayedoperation=deleterecords}

Bug: T175922
Change-Id: I985eea24729237034c05eabfc4eb1707f162015d

--- a/modules/profile/files/kafka/broker_prometheus_jmx_exporter.yaml
+++ b/modules/profile/files/kafka/broker_prometheus_jmx_exporter.yaml
@@ -64,6 +64,11 @@ rules:
 - pattern : kafka.server<type=(.+), name=(.+)><>(Count|Value)
   name: kafka_server_$1_$2
 
+- pattern : kafka.server<type=(.*), name=(.+), delayedOperation=(.+)><>(Count|Value)
+  name: kafka_server_$1_$2
+  labels:
+    delayedoperation: "$3"
+
 - pattern : kafka.(\w+)<type=(.+), name=(.+)PerSec\w*><>Count
   name: kafka_$1_$2_$3_total
 - pattern : kafka.(\w+)<type=(.+), name=(.+)PerSec\w*, topic=(.+)><>Count
