hieradata::regex: allow notifications for mw132[0-8]
Bug: T165519
Change-Id: Ie2933ef1d4d41d8f69add82253e1254977d749f8

--- a/hieradata/regex.yaml
+++ b/hieradata/regex.yaml
@@ -313,5 +313,5 @@ cache_numa_isolate:
 
 # Temporary to allow a painless host imaging process
 new_mw_appservers:
-  __regex: !ruby/regexp /^mw13(0[7-9]|1[0-9]|2[0-8])\.eqiad\.wmnet$/
+  __regex: !ruby/regexp /^mw13(0[7-9]|1[0-9])\.eqiad\.wmnet$/
   profile::base::notifications_enabled: '0'
