--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -297,19 +297,15 @@ statistics_servers:
   - stat1006.eqiad.wmnet
   - dataset1001.wikimedia.org
   - thorium.eqiad.wmnet
-dataset_clients_snapshots:
-  - snapshot1001.eqiad.wmnet
-  - snapshot1005.eqiad.wmnet
-  - snapshot1006.eqiad.wmnet
-  - snapshot1007.eqiad.wmnet
-dataset_clients_other:
-  - stat1005.eqiad.wmnet
-  - stat1006.eqiad.wmnet
-dumps_clients_snapshots:
-  - snapshot1001.eqiad.wmnet
-  - snapshot1005.eqiad.wmnet
-  - snapshot1006.eqiad.wmnet
-  - snapshot1007.eqiad.wmnet
+dumps_nfs_clients:
+  snapshots:
+    - snapshot1001.eqiad.wmnet
+    - snapshot1005.eqiad.wmnet
+    - snapshot1006.eqiad.wmnet
+    - snapshot1007.eqiad.wmnet
+  other:
+    - stat1005.eqiad.wmnet
+    - stat1006.eqiad.wmnet
 dumps_web_rsync_server_clients:
   ipv4:
     - dataset1001.wikimedia.org
