--- a/hieradata/role/common/builder.yaml
+++ b/hieradata/role/common/builder.yaml
@@ -3,7 +3,8 @@ profile::docker::engine::version: "1.12.6-0~debian-jessie"
 profile::docker::engine::declare_service: true
 profile::docker::engine::settings:
   live-restore: true
-profile::docker::storage::loopback::source_dir: "/srv/docker-dm"
 profile::docker::builder::proxy_address: "webproxy.%{::site}.wmnet"
 profile::docker::builder::proxy_port: "8080"
 monitor_screens: false
+# The default setup has no lvm, so no source
+#profile::docker::storage::loopback::dm_source: null
