role::kafka::jumbo::broker: rename cluster hiera variable
Change also the monitoring hiera value related to jumbo_kafka.

Bug: T175922
Change-Id: I2d76a88610558f9ccdd1bfbfcf7c2c178d60bf31

--- a/hieradata/common/monitoring.yaml
+++ b/hieradata/common/monitoring.yaml
@@ -70,7 +70,7 @@ monitoring::groups:
     description: Ganeti virt cluster codfw
 
 # Kafka jumbo
-  jumbo_kafka_eqiad:
+  kafka_jumbo_eqiad:
     description: Kafka jumbo cluster in eqiad
 
 # Kubernetes
