Fix /data/ redirect for commons
I559e895db0 was missing a percent sign.

Bug: T163922
Change-Id: I1451c2abc044c0cf52ce559ce8d60ed4f9528830

--- a/modules/mediawiki/files/apache/sites/remnant.conf
+++ b/modules/mediawiki/files/apache/sites/remnant.conf
@@ -81,7 +81,7 @@
     RewriteRule ^/upload/(.*)$ %{ENV:RW_PROTO}://upload.wikimedia.org/wikipedia/commons/$1 [R=302]
 
     # /data/ path T163922
-    RewriteRule ^/data/(.*)/(.*)$ {ENV:RW_PROTO}://commons.wikimedia.org/wiki/Special:PageData/$1/$2 [R=301,QSA]
+    RewriteRule ^/data/(.*)/(.*)$ %{ENV:RW_PROTO}://commons.wikimedia.org/wiki/Special:PageData/$1/$2 [R=301,QSA]
 
     Include "sites-enabled/api-rewrites.incl"
 
