Set up separate druid public-eqiad cluster.
NOTE: It is safe to rename the 'druid-eqiad' Zookeeper cluster
to 'druid-analytics-eqiad', because it is only used in puppet.
There is nothing in zookeeper or druid configurations that
refer to the Zookeeper cluster name.

This also sets up a new Zookeeper cluster colocated on the
druid public-eqiad nodes called 'druid-public-eqiad'.

Bug: T176223
Change-Id: I8624fbc402105cc44818a2ee8d0db7dbab3526ee

--- a/hieradata/common.yaml
+++ b/hieradata/common.yaml
@@ -445,13 +445,21 @@ zookeeper_clusters:
       conf2002.codfw.wmnet: '2002'
       conf2003.codfw.wmnet: '2003'
 
-  # ZK cluster for Druid (in Analytics cluster),
-  # colocated with Druid.
-  druid-eqiad:
+  # ZK cluster for Druid analytics-eqiad cluster (non public),
+  # colocated on druid hosts.
+  druid-analytics-eqiad:
     hosts:
       druid1001.eqiad.wmnet: '1001'
       druid1002.eqiad.wmnet: '1002'
       druid1003.eqiad.wmnet: '1003'
+
+  # ZK cluster for Druid public-eqiad cluster, (for AQS, wikistats, etc.)
+  # colocated on druid hosts.
+  druid-public-eqiad:
+    hosts:
+      druid1004.eqiad.wmnet: '1004'
+      druid1005.eqiad.wmnet: '1005'
+      druid1006.eqiad.wmnet: '1006'
 
 # Used to sync the setting between all Kafka clusters and clients.
 kafka_message_max_bytes: 4194304
