--- a/hieradata/role/common/druid/public/worker.yaml
+++ b/hieradata/role/common/druid/public/worker.yaml
@@ -4,7 +4,7 @@ admin::groups:
 # Druid nodes get their own Zookeeper cluster to isolate them
 # from the production ones.
 # Configure the zookeeper profile.
-profile::zookeeper::cluster_name: druid-analytics-eqiad
+profile::zookeeper::cluster_name: druid-public-eqiad
 # Don't page if a zookeeper server in this cluster goes down.
 profile::zookeeper::is_critical: false
 # Max number of connections per IP for Zookeeper
@@ -16,7 +16,7 @@ profile::zookeeper::sync_limit: 8
 # To avoid version conflics with Cloudera zookeeper package, this
 # class manually specifies which debian package version should be installed.
 profile::zookeeper::zookeeper_version: '3.4.5+dfsg-2+deb8u2'
-profile::zookeeper::firewall::srange: '$DRUID_ANALYTICS_HOSTS'
+profile::zookeeper::firewall::srange: '$DRUID_PUBLIC_HOSTS'
 
 # Druid nodes also incldue CDH, so we need to specify a few defaults that
 # let them find the Hadoop Cluster.
@@ -29,20 +29,18 @@ profile::hadoop::client::resourcemanager_hosts:
 # -- Druid common configuration
 
 # The logical name of this druid cluster
-profile::druid::common::druid_cluster_name: analytics-eqiad
+profile::druid::common::druid_cluster_name: public-eqiad
 # The logical name of the zookeeper cluster that druid should use
-profile::druid::common::zookeeper_cluster_name: druid-analytics-eqiad
+profile::druid::common::zookeeper_cluster_name: druid-public-eqiad
 
 # Make druid build an extension composed of CDH jars.
 profile::druid::common::use_cdh: true
 
-# The default MySQL Druid metadata storage database name is just 'druid'.
-# Since the analytics-eqiad Druid cluster was originally the only one,
-# We set this to the default of 'druid', just to be explicit about it.
-profile::druid::common::metadata_storage_database_name: 'druid'
+# Use this as the metadata storage database name in MySQL.
+profile::druid::common::metadata_storage_database_name: 'druid_public_eqiad'
 
 profile::druid::daemons_autoreload: false
-profile::druid::ferm_srange: '$ANALYTICS_NETWORKS'
+profile::druid::ferm_srange: '$DRUID_PUBLIC_HOSTS'
 profile::druid::monitoring_enabled: true
 
 profile::druid::common::properties:
@@ -52,13 +50,13 @@ profile::druid::common::properties:
   druid.storage.type: hdfs
   druid.request.logging.type: file
   druid.request.logging.dir: /var/log/druid
-  # Historically, the analytics-eqiad Druid cluster was the only one,
-  # and as such had a deep storage directory in HDFS without
-  # the cluster name in the path.
+  # We need to use a special deep storage directory in HDFS so
+  # we don't conflict with other (e.g. analytics-eqiad) druid
+  # cluster deep storage.
   # NOTE: This directory is ensured to exist by usage of the
   # druid::cdh::hadoop::deep_storage define included in the
   # role::analytics_cluster::hadoop::master class.
-  druid.storage.storageDirectory: /user/druid/deep-storage
+  druid.storage.storageDirectory: /user/druid/deep-storage-public-eqiad
 
 
 # -- Druid worker service configurations
@@ -66,7 +64,7 @@ profile::druid::common::properties:
 # --- Druid Broker
 
 # Broker gets a special ferm_srange since it is the frontend query interface to Druid.
-profile::druid::broker::ferm_srange: '$ANALYTICS_NETWORKS'
+profile::druid::broker::ferm_srange: '$DOMAIN_NETWORKS'
 profile::druid::broker::properties:
   druid.processing.numThreads: 10
   druid.processing.buffer.sizeBytes: 2147483647
@@ -121,8 +119,9 @@ profile::druid::middlemanager::env:
 
 
 # --- Druid Overlord
+
 # Overlord will accept indexing jobs from Hadoop nodes in the ANALYTICS_NETWORKS
-profile::druid::overlord::ferm_srange: '$ANALYTICS_NETWORKS'
+profile::druid::overlord::ferm_srange: '(($DRUID_PUBLIC_HOSTS $ANALYTICS_NETWORKS))'
 profile::druid::overlord::properties:
   druid.indexer.runner.type: remote
   druid.indexer.storage.type: metadata
